--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -3,8 +3,7 @@
   background-image: url(../../../images/Pencil_button.svg);
   background-position: center;
   background-repeat: no-repeat;
-  border: 1px solid #fff;
-  border-radius: 2px;
+  border: 1px solid #FFFFFF;
   width: 24px;
   height: 24px;
   padding: 0;
