--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -1,4 +1,4 @@
-.photo__like {
+.cards__like {
   width: 22px;
   height: 19px;
   box-sizing: border-box;
@@ -14,11 +14,11 @@
   align-self: center;
 }
 
-.photo__like:hover {
+.cards__like:hover {
   opacity: 0.6;
 }
 
-.photo__like:active {
+.cards__like:active {
   background-image: url(../../../images/Active_like.svg);
   opacity: 1;
 }
