--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -21,6 +21,12 @@
 @media screen and (max-width: 424px) {
   .popup__container {
     width: 90vw;
-    padding: 30px 20px;
+    padding: 25px 22px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .popup__container {
+    width: 282px;
+    padding: 25px 22px;
   }
 }
