--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/inter.css);
+@import url(../vendor/fonts/inter.css);
 
 @import url(../blocks/page/page.css);
 
@@ -13,21 +13,21 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
-@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__info-edit-button/profile__info-edit-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__profession/profile__profession.css);
 
 
-@import url(../blocks/photo/photo.css);
-@import url(../blocks/photo/__cap/photo__cap.css);
-@import url(../blocks/photo/__item/photo__item.css);
-@import url(../blocks/photo/__like/photo__like.css);
-@import url(../blocks/photo/__list-img/photo__list-img.css);
-@import url(../blocks/photo/__list-item/photo__list-item.css);
-@import url(../blocks/photo/__list/photo__list.css);
-@import url(../blocks/photo/__cap-text/photo__cap-text.css);
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__cap/cards__cap.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__like/cards__like.css);
+@import url(../blocks/cards/__list-img/cards__list-img.css);
+@import url(../blocks/cards/__list-item/cards__list-item.css);
+@import url(../blocks/cards/__list/cards__list.css);
+@import url(../blocks/cards/__cap-text/cards__cap-text.css);
 
 
 @import url(../blocks/footer/footer.css);
