--- a/blocks/cards/__list-img/cards__list-img.css
+++ b/blocks/cards/__list-img/cards__list-img.css
@@ -1,8 +1,11 @@
-.photo__list-img {
+.cards__list-img {
   height: 282px;
   width: 100%;
   border: none;
+  border-radius: 10px 10px 0 0 ;
   box-sizing: border-box;
   background-size: 50%, contain;
   object-fit: cover;
 }
+
+
