--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -8,7 +8,7 @@
   line-height: 22px;
   font-weight: 400;
   padding: 14px 0 18px;
-  margin-top: 18px;
+  margin-top: 26px;
   border: none;
   transition: all .1s linear;
 }
@@ -23,6 +23,13 @@
     width: 100%;
     font-size: 14px;
     line-height: 17px;
+    padding: 14px 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .popup__button {
+    margin-top: 28px;
     padding: 14px 0;
   }
 }
