--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,7 +6,7 @@
   letter-spacing: 0em;
   text-align: left;
   color: #000000;
-  margin-bottom: 54px;
+  margin: 0 0 34px;
 }
 
 @media screen and (max-width: 767px) {
@@ -14,5 +14,12 @@
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 41px;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .popup__title {
+    margin-bottom: 65px;
   }
 }
