--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,7 +1,10 @@
 .cards__item {
   width: 282px;
   margin: 0;
+  padding: 0;
   justify-self: center;
+  border-radius: 10px;
+  background-color: #FFF;
 }
 
 @media screen and (max-width: 896px) {
