--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.cards__like-button {
+.card__like-button {
   width: 22px;
   height: 19px;
   box-sizing: border-box;
@@ -14,6 +14,6 @@
   align-self: center;
 }
 
-.cards__like-button:hover {
+.card__like-button:hover {
   opacity: 0.5;
 }
