--- a/pages/index.css
+++ b/pages/index.css
@@ -20,13 +20,14 @@
 
 
 @import url(../blocks/cards/cards.css);
-@import url(../blocks/cards/__info/cards__info.css);
-@import url(../blocks/cards/__item/cards__item.css);
-@import url(../blocks/cards/__like-button/cards__like-button.css);
-@import url(../blocks/cards/__like-button/_active/card__like-button_active.css);
-@import url(../blocks/cards/__list-img/cards__list-img.css);
 @import url(../blocks/cards/__list/cards__list.css);
-@import url(../blocks/cards/__title/cards__title.css);
+
+@import url(../blocks/card/__info/card__info.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
+@import url(../blocks/card/__list-img/card__list-img.css);
+@import url(../blocks/card/__title/card__title.css);
 
 
 @import url(../blocks/footer/footer.css);
