--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,7 +4,9 @@
   position: fixed;
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
   transition: all 0.2s linear;
   z-index: 4;
   overflow: auto;
@@ -12,4 +14,3 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
-
