--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,7 @@
 @import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 @import url(../blocks/card/__list-img/card__list-img.css);
 @import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__delete-button/card__delete-button.css);
 
 
 @import url(../blocks/footer/footer.css);
@@ -44,3 +45,8 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__fullScreen/popup__fullScreen.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-firure/popup__image-figure.css);
+@import url(../blocks/popup/__image-subtitle/popup__image-subtitle.css);
+@import url(../blocks/popup/_open/_img/popup_open_img.css);
