--- a/pages/index.css
+++ b/pages/index.css
@@ -50,3 +50,6 @@
 @import url(../blocks/popup/__image-firure/popup__image-figure.css);
 @import url(../blocks/popup/__image-subtitle/popup__image-subtitle.css);
 @import url(../blocks/popup/_open/_img/popup_open_img.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
