--- a/pages/index.css
+++ b/pages/index.css
@@ -53,3 +53,4 @@
 @import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 @import url(../blocks/popup/__input/_error/popup__input_error.css);
+@import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
