--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,6 +9,7 @@
   border: 2px solid #FFFFFF;
   border-radius: 2px;
   margin-left: auto;
+  margin-bottom: 8px;
   padding: 0;
   transition: all .1s linear;
   box-sizing: border-box;
