--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,8 +2,8 @@
   width: 100%;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 0;
-  margin: 17px 0 13px 0;
+  padding: 17px 0 13px 0;
+  margin: 0;
   transition: all 0.2s linear;
   background-color: transparent;
   font-family: 'Inter', Arial, sans-serif;
