--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -5,8 +5,9 @@
   color: #FF0000;
   margin-top: 5px;
   opacity: 0;
-  position: absolute;
+  min-height: 30px;
+  /* position: absolute;
   top: 100%;
-  left: 0;
+  left: 0; */
   transition: 0.3s;
 }
