--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -2,7 +2,7 @@
   width: 100%;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 17px 0 13px 0;
+  padding: 0 0 10px 0;
   margin: 0;
   transition: all 0.2s linear;
   background-color: transparent;
