--- a/src/blocks/popup/__input-error/popup__input-error.css
+++ b/src/blocks/popup/__input-error/popup__input-error.css
@@ -6,8 +6,6 @@
   margin-top: 5px;
   opacity: 0;
   min-height: 30px;
-  /* position: absolute;
-  top: 100%;
-  left: 0; */
+  font-family: Inter, Arial, sans-serif;
   transition: 0.3s;
 }
