--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,7 +2,8 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  margin: 0 30px 0 0;
+  margin: 0;
+
 }
 
 @media screen and (max-width: 880px) {
