--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -3,7 +3,7 @@
   display: grid;
   align-items: baseline;
   grid-template-columns: 1fr 24px;
-  margin-right: 15px;
+  margin:0 15px 0 30px;
   column-gap: 17px;
   row-gap: 16px;
   grid-template-areas:
