--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -17,7 +17,8 @@
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__profession/profile__profession.css);
-
+@import url(../blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css);
+@import url(../blocks/profile/__avatar-box/profile__avatar-box.css);
 
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__list/cards__list.css);
@@ -30,6 +31,8 @@
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__delete-button/card__delete-button.css);
 @import url(../blocks/card/__delete-button/_inactive/card__like-button_inactive.css);
+@import url(../blocks/card/__box/card__box.css);
+@import url(../blocks/card/__like-counter/card__like-counter.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -55,3 +58,4 @@
 @import url(../blocks/popup/__input/_error/popup__input_error.css);
 @import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button-save/_loading/popup__button-save_loading.css);
